--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,7 +18,9 @@ akka {
         "scala.None$",
         "cmgd.zenghj.hss.actor.DirectiveStopMember$",
         "cmgd.zenghj.hss.actor.DirectiveListDir$",
-        "cmgd.zenghj.hss.actor.DirectiveListFile"
+        "cmgd.zenghj.hss.actor.DirectiveListFile",
+        "cmgd.zenghj.hss.actor.DirectiveStat$",
+        "cmgd.zenghj.hss.actor.DirectiveStatResult"
       ]
     }
     serializers { #配置可能使用的序列化算法
@@ -32,6 +34,8 @@ akka {
       "cmgd.zenghj.hss.actor.DirectiveStopMember$"=kryo
       "cmgd.zenghj.hss.actor.DirectiveListDir$"=kryo
       "cmgd.zenghj.hss.actor.DirectiveListFile"=kryo
+      "cmgd.zenghj.hss.actor.DirectiveStat$"=kryo
+      "cmgd.zenghj.hss.actor.DirectiveStatResult"=kryo
     }
   }
   remote {
@@ -49,14 +53,15 @@ akka {
 
     auto-down-unreachable-after = 5s
   }
-  #extensions = ["akka.cluster.metrics.ClusterMetricsExtension"]
 }
 
 #akka cluster路由器配置
 cluster-router {
   master {
     #master 计划任务刷新时间间隔
-    schedule-interval = 15
+    schedule-interval = 20
+    #统计各个GetFileWorker的时间间隔
+    stat-interval = 10
   }
   #目录文件列表路由器设置
   listfile-router {
@@ -76,7 +81,7 @@ ftp {
   ftp-host = "localhost"
   ftp-port = 21
   ftp-user = "cookeem"
-  ftp-pass = "asdasd"
+  ftp-pass = "man8080"
   #远程ftp根目录
   ftp-root = "/Volumes/Share/Download/HSS"
   #本地ftp目录
