support non-blocking kafka sink support trouble failure recovery

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,7 +20,9 @@ akka {
         "cmgd.zenghj.hss.actor.DirectiveListDir$",
         "cmgd.zenghj.hss.actor.DirectiveListFile",
         "cmgd.zenghj.hss.actor.DirectiveStat$",
-        "cmgd.zenghj.hss.actor.DirectiveStatResult"
+        "cmgd.zenghj.hss.actor.DirectiveStatResult",
+        "cmgd.zenghj.hss.actor.DirectiveFtpKafka",
+        "cmgd.zenghj.hss.actor.DirectiveFtpKafkaResult"
       ]
     }
     serializers { #配置可能使用的序列化算法
@@ -36,6 +38,8 @@ akka {
       "cmgd.zenghj.hss.actor.DirectiveListFile"=kryo
       "cmgd.zenghj.hss.actor.DirectiveStat$"=kryo
       "cmgd.zenghj.hss.actor.DirectiveStatResult"=kryo
+      "cmgd.zenghj.hss.actor.DirectiveFtpKafka"=kryo
+      "cmgd.zenghj.hss.actor.DirectiveFtpKafkaResult"=kryo
     }
   }
   remote {
