--- a/conf/application.conf
+++ b/conf/application.conf
@@ -85,7 +85,7 @@ ftp {
   ftp-host = "localhost"
   ftp-port = 21
   ftp-user = "cookeem"
-  ftp-pass = "man8080"
+  ftp-pass = "asdasd"
   #远程ftp根目录
   ftp-root = "/Volumes/Share/Download/HSS"
   #本地ftp目录
